fix(post): 인기글 v5 캐시 직렬화 오류 수정 및 워밍 스케줄러 활성화
Stream.toList()가 반환하는 불변 리스트(final 클래스)는 activateDefaultTyping(NON_FINAL)
설정에서 타입 정보가 생략되어 캐시 저장 시엔 문제없이 쓰이지만 조회 시 역직렬화 오류
(Unexpected token START_ARRAY)가 발생해 캐시가 항상 DB로 폴백되고 있었음.
Collectors.toList()(ArrayList)로 변경해 타입 래핑 대칭을 맞춤.
아울러 v5 캐시 워밍 스케줄러를 활성화해 Cache Stampede 방지 적용.